Update api run tests
